// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPasswordForgotPageUI > should render AuthPasswordForgotPageUI 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="typography subtitle full"
      >
        Uh-oh, Lost Your Key?
      </div>
      <div
        class="typography text medium"
      >
        Don’t panic – it happens! Drop your email below and we’ll beam you a shiny new password link.
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-email-textfield"
              id="email"
              maxlength="128"
              minlength="6"
              name="email"
              placeholder="Email"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-continue-button-button"
            disabled=""
            id="continue-button"
            name="continue-button"
            type="submit"
          >
            <span>
              Send Reset Link
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AuthPasswordForgotPageUI > should render AuthPasswordForgotPageUI when loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="typography subtitle full"
      >
        Uh-oh, Lost Your Key?
      </div>
      <div
        class="typography text medium"
      >
        Don’t panic – it happens! Drop your email below and we’ll beam you a shiny new password link.
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-email-textfield"
              disabled=""
              id="email"
              maxlength="128"
              minlength="6"
              name="email"
              placeholder="Email"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-continue-button-button"
            disabled=""
            id="continue-button"
            name="continue-button"
            type="submit"
          >
            <div
              class="loadingSpinner"
            >
              <div />
              <div />
              <div />
            </div>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
